# mystrps-drf

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  logs.sh  pyproject.toml  shell.sh
src/: manage.py
src/companies/: admin.py  apps.py
src/companies/api/v1/: urls.py
src/companies/api/v1/serializers/: __init__.py  company.py  company_owner.py  office.py
src/companies/api/v1/views/: __init__.py  company.py  company_owner.py  office.py
src/companies/management/commands/: seed_companies.py
src/companies/migrations/: 0001_initial.py  0002_initial.py
src/companies/mixins/: CompanyMixins.py
src/companies/models/: __init__.py  company.py  company_owner.py  office.py
src/server/: celery.py  urls.py
src/server/engine/: views.py
src/server/engine/templates/: scalar.html
src/server/management/commands/: seed_all.py
src/server/settings/: __init__.py
src/server/settings/components/: caches.py  celery.py  common.py  i18n.py  security.py  storage.py
src/server/settings/environments/: development.py  testing.py
src/sgi/: asgi.py  wsgi.py
src/users/: admin.py
src/users/api/v1/: urls.py
src/users/api/v1/serializers/: __init__.py  user.py
src/users/api/v1/views/: __init__.py  auth.py  user.py
src/users/management/commands/: seed_users.py
src/users/migrations/: 0001_initial.py
src/users/models/: user.py
src/utils/: permissions.py
src/utils/models/: __init__.py  base.py
src/utils/serializers/: __init__.py  history.py
